feat: add analytics, rewards, settings+themes, QR scanner; production deploy config for Railway+Vercel